# egg-fetcher

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: release.yaml
src/: config.rs  main.rs
src/resources/: colors.rs  fonts.rs
src/scenes/: mod.rs
src/scenes/loading/: ui.rs
src/scenes/play/: mod.rs  ui.rs
src/scenes/play/maps/: map1.rs  mod.rs
src/scenes/title/: mod.rs  ui.rs
src/ui/components/: action.rs
src/ui/components/text/: embossed.rs  simple.rs
src/ui/layout/: housing.rs
