[package]
name = "egg_fetcher"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
[features]
default = ['bevy/dynamic']

[dependencies.bevy]
version = "0.7.0"
default-features = false
features = ["bevy_gilrs", "bevy_winit", "render", "png", "hdr", "wayland", "filesystem_watcher"]

[dependencies.bevy_kira_audio]
version = "0.9.0"
features = ["wav"]
